# smll

./: .gitignore  CMakeLists.txt  README.md  compare.ipynb  example.py  pyproject.toml  test_simple.py  test_tokenize.py
.github/workflows/: publish.yml
benchmark/: benchmarks.py  run_benchmarks.sh  visualize_benchmarks.py
benchmark/results/: results.json
benchmark/results/charts/: summary.md
include/: smll.cpp  smol.cpp
smll/: __init__.py
smol/: __init__.py
