[project]
name = "pysmll"
version = "0.0.0"
description = "Compression library with C++ backend"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Frank Chiarulli Jr.", email = "frank@frankchiarulli.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]
dependencies = [
    "huggingface-hub>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/fcjr/smll"
Repository = "https://github.com/fcjr/smll"
Issues = "https://github.com/fcjr/smll/issues"

[build-system]
requires = ["scikit-build-core>=0.9.2", "pybind11>=2.10.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.verbose = true
cmake.build-type = "Release"
wheel.packages = ["smll"]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "zstd>=1.5.7.2",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]
